# django-query-capture

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  deploy.yml  docs.yml  release-drafter.yml  release_drafter.yml
api_guide/capture_query/: index.html
api_guide/captured_query/: index.html
api_guide/classified_query/: index.html
api_guide/presenter/: index.html
api_guide/test_util/: index.html
code_of_conduct/: index.html
contributing/: index.html
coverage/: covindex.html  d_520d7822f3af6924___init___py.html  d_520d7822f3af6924_base_py.html  d_520d7822f3af6924_most_query_location_py.html  d_520d7822f3af6924_only_slow_query_py.html  d_520d7822f3af6924_pretty_py.html  d_520d7822f3af6924_raw_line_py.html  d_520d7822f3af6924_simple_py.html  d_964cd95bca9b3a56___init___py.html  d_964cd95bca9b3a56_base_py.html  d_b152735425ef49da___init___py.html  d_b152735425ef49da_capture_py.html  d_b152735425ef49da_classify_py.html  d_b152735425ef49da_decorators_py.html  d_b152735425ef49da_middleware_py.html  d_b152735425ef49da_presenter_py.html  d_b152735425ef49da_settings_py.html  d_b152735425ef49da_test_utils_py.html  d_b152735425ef49da_utils_py.html  index.html  status.json
django_query_capture/: __init__.py  __main__.py  capture.py  classify.py  decorators.py  middleware.py  presenter.py  settings.py  test_utils.py  utils.py
django_query_capture/presenter/: __init__.py  base.py  only_slow_query.py  pretty.py  raw_line.py  simple.py
django_query_capture/printer/: __init__.py  base.py
docker/: Dockerfile  README.md
docs/: gen_ref_nav.py
docs/api_guide/: capture_query.md  captured_query.md  classified_query.md  presenter.md  test_util.md
docs/home/: customize_presenter.md  overview.md  settings.md
home/customize_presenter/: index.html
home/overview/: index.html
home/settings/: index.html
htmlcov/: d_520d7822f3af6924___init___py.html  d_520d7822f3af6924_base_py.html  d_520d7822f3af6924_only_slow_query_py.html  d_520d7822f3af6924_pretty_py.html  d_520d7822f3af6924_raw_line_py.html  d_520d7822f3af6924_simple_py.html  d_b152735425ef49da___init___py.html  d_b152735425ef49da_capture_py.html  d_b152735425ef49da_classify_py.html  d_b152735425ef49da_decorators_py.html  d_b152735425ef49da_middleware_py.html  d_b152735425ef49da_settings_py.html  d_b152735425ef49da_test_utils_py.html  d_b152735425ef49da_utils_py.html  index.html  status.json
license/: index.html
reference/SUMMARY/: index.html
reference/capture/: index.html
reference/classify/: index.html
reference/decorators/: index.html
reference/middleware/: index.html
reference/presenter/base/: index.html
reference/presenter/only_slow_query/: index.html
reference/presenter/pretty/: index.html
reference/presenter/raw_line/: index.html
reference/presenter/simple/: index.html
reference/settings/: index.html
reference/test_utils/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: conftest.py  test_captured_query_classifier.py  test_inefficient_query.py  test_middleware.py  test_native_query_capture.py  test_presenter.py  test_query_capture.py  tests.py
tests/news/: models.py
tests/news/migrations/: 0001_initial.py
tests/test_example/: test_hello.py
tests/test_presenter/: __init__.py  test_base.py  test_only_slow_query.py  test_pretty.py  test_query_capture.py  test_raw_line.py  test_simple.py  utils.py
